
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.


2008-Apr-22 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+eeschema
  * Spent a 1/2 day tracking down two linked list bugs in deleting a
    DRAW_HIERARCHICAL_PIN_SHEET_STRUCT_TYPE.   I cannot believe in the year
    2008 we should have to debug a linked list function.  This is stuff I expected
    to do 20 years ago, not today.  The function
    void WinEDA_SchematicFrame::DeleteSheetLabel( wxDC* DC,
              Hierarchical_PIN_Sheet_Struct* SheetLabelToDel ) never worked as
    far as I can tell.
    Should switch to boost::ptr_vector ASAP everywhere, and leave linked lists in the 1980's.
  * Hierarchical_PIN_Sheet_Struct::Hierarchical_PIN_Sheet_Struct() was not
    setting the m_Parent.


2008-Apr-21 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
  * Added WinEDA_LibeditFrame::GeneralControle( wxDC* DC, wxPoint Mouse );
  * Added WinEDA_ViewlibFrame::GeneralControle( wxDC* DC, wxPoint Mouse );
  Needed: Move redundant code to WinEDA_DrawFrame::GeneralControle

  ** Current sheet only Annotation and clear annotation now works for complex hierarchies


2008-Apr-17 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+all
  * Made a little more sense out of the GetScreen() problem by making it
    non-virtual, and having the two types of frame classes (eeschema's and pcbnew's)
    each return their respective types of screens {SCH,PCB}_SCREEN*.
  * Added GetBaseScreen() as the virtual function which always returns BASE_SCREEN*.
  * Made WinEDA_DrawFrame::GeneralControle( wxDC* DC, wxPoint Mouse ){ dummy }
  * Added WinEDA_SchematicFrame::GeneralControle( wxDC* DC, wxPoint Mouse );