@@ -5,6 +5,11 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Apr-21 UPDATE   Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++pcbnew
+    PS output: now shows oblong holes with the true shape.
+
 
 2008-Apr-22 UPDATE   Dick Hollenbeck <dick@softplc.com>
 ================================================================================
